@@ -1,7 +1,7 @@
 package org.jabref.model.groups;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
@@ -18,39 +18,39 @@ class AutomaticPersonsGroupTest {
                      .map(lastName ->
                              new LastNameGroup(lastName, GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR, lastName))
                      .map(GroupTreeNode::new)
-                     .collect(Collectors.toList())
+                     .toList()
                      .toArray(GroupTreeNode[]::new);
     }
 
     @Test
     void createSubgroupsFromCommaSeparatedLastNames() {
         BibEntry bibEntry = new BibEntry().withField(StandardField.AUTHOR, "Turing, Alan and Hopper, Grace");
-        var subgroups = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
-        var expectedSubgroups = createPersonSubGroupFrom("Turing", "Hopper");
+        Set<GroupTreeNode> subgroups = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
+        GroupTreeNode[] expectedSubgroups = createPersonSubGroupFrom("Turing", "Hopper");
         assertThat(subgroups, containsInAnyOrder(expectedSubgroups));
     }
 
     @Test
     void createSubgroupsContainingSpaceSeparatedNames() {
         BibEntry bibEntry = new BibEntry().withField(StandardField.AUTHOR, "Alan Turing and Grace Hopper");
-        var subgroups = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
-        var expectedSubgroups = createPersonSubGroupFrom("Turing", "Hopper");
+        Set<GroupTreeNode> subgroups = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
+        GroupTreeNode[] expectedSubgroups = createPersonSubGroupFrom("Turing", "Hopper");
         assertThat(subgroups, containsInAnyOrder(expectedSubgroups));
     }
 
     @Test
     void createSubgroupFromLatex() {
         BibEntry bibEntry = new BibEntry().withField(StandardField.AUTHOR, "Kurt G{\\\"{o}}del");
-        var subgroup = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
-        var expectedSubgroup = createPersonSubGroupFrom("Gödel");
+        Set<GroupTreeNode> subgroup = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
+        GroupTreeNode[] expectedSubgroup = createPersonSubGroupFrom("Gödel");
         assertThat(subgroup, contains(expectedSubgroup));
     }
 
     @Test
     void createSubgroupFromUnicode() {
         BibEntry bibEntry = new BibEntry().withField(StandardField.AUTHOR, "Kurt Gödel");
-        var subgroup = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
-        var expectedSubgroup = createPersonSubGroupFrom("Gödel");
+        Set<GroupTreeNode> subgroup = new AutomaticPersonsGroup("", GroupHierarchyType.INDEPENDENT, StandardField.AUTHOR).createSubgroups(bibEntry);
+        GroupTreeNode[] expectedSubgroup = createPersonSubGroupFrom("Gödel");
         assertThat(subgroup, contains(expectedSubgroup));
     }
 }
